Fixes errors overlapping the content

--- a/src/components/ExtensionApp.scss
+++ b/src/components/ExtensionApp.scss
@@ -30,6 +30,12 @@ body,
     z-index: 9999;
   }
 
+  .bqml-app--header-placeholder {
+    display: block;
+    width: 100%;
+    height: 0;
+  }
+
   .bqml-app-container {
     padding: 100px 30px;
   }
